fix(Drawer): ScrollArea overflow-x issue

--- a/packages/frosted-ui/src/components/drawer.css
+++ b/packages/frosted-ui/src/components/drawer.css
@@ -7,8 +7,7 @@
   display: flex;
   flex-direction: column;
 
-  /* width: 380px;
-  max-width: 100%; */
+  max-width: 100%;
 
   box-sizing: border-box;
   background-color: var(--color-panel-solid);
@@ -34,11 +33,13 @@
   overflow-y: auto;
   -webkit-box-flex: 1;
   flex-grow: 1;
-}
 
-.fui-BodyScrollArea:has([data-is-scrollable='true']) {
-  border-bottom: 1px solid var(--gray-6);
-  border-top: 1px solid var(--gray-6);
+  &:where([data-is-scrollable='true']) {
+    border-top: 1px solid var(--gray-6);
+  }
+  &:where([data-is-scrollable='true']:has(+ .fui-DrawerStickyFooter)) {
+    border-bottom: 1px solid var(--gray-6);
+  }
 }
 
 .fui-DrawerBody {
@@ -68,9 +69,6 @@
     }
     &:where(.fui-r-size-3) {
       --drawer-content-padding: var(--space-5);
-    }
-    &:where(.fui-r-size-4) {
-      --drawer-content-padding: var(--space-6);
     }
   }
 }
